// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NameValueList should render 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
  color: #000000;
  font-weight: bold;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct alignment of name 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
  color: #000000;
  font-weight: bold;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct alignment of value 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
  color: #000000;
  font-weight: bold;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct gap between rows and columns 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 48px 12px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
  color: #000000;
  font-weight: bold;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct width of name 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
  color: #000000;
  font-weight: bold;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render correct width of value 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fit,minmax(auto,96px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
  color: #000000;
  font-weight: bold;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render name/value as a column when pairProps = { direction: 
    'column' } 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
  color: #000000;
  font-weight: bold;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render pairs in a grid when layout="grid" 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
  color: #000000;
  font-weight: bold;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should render value above name when pairProps = { direction: 
    'column-reverse' } 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fit,minmax(auto,384px) );
  grid-gap: 24px 48px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
  color: #000000;
  font-weight: bold;
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dd
        class="c3"
      >
        entry
      </dd>
      <dt
        class="c4"
        width="small"
      >
        name
      </dt>
    </div>
    <div
      class="c2"
    >
      <dd
        class="c3"
      >
        San Francisco
      </dd>
      <dt
        class="c4"
        width="small"
      >
        location
      </dt>
    </div>
    <div
      class="c2"
    >
      <dd
        class="c3"
      >
        80
      </dd>
      <dt
        class="c4"
        width="small"
      >
        health
      </dt>
    </div>
  </dl>
</div>
`;

exports[`NameValueList should support custom theme 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: grid;
  box-sizing: border-box;
  grid-template-columns: repeat( auto-fit,minmax(auto,192px) );
  grid-gap: 48px 12px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
  color: #000000;
  font-weight: bold;
}

.c4 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
}

<div
  class="c0"
>
  <dl
    class="c1"
  >
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        name
      </dt>
      <dd
        class="c4"
      >
        entry
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        location
      </dt>
      <dd
        class="c4"
      >
        San Francisco
      </dd>
    </div>
    <div
      class="c2"
    >
      <dt
        class="c3"
        width="small"
      >
        health
      </dt>
      <dd
        class="c4"
      >
        80
      </dd>
    </div>
  </dl>
</div>
`;
